infrastructure/buildbuddy/003-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: buildbuddy-app
  namespace: default
spec:
  replicas: 1
  serviceName: buildbuddy-app
  selector:
    matchLabels:
      app: buildbuddy-app
  template:
    metadata:
      labels:
        app: buildbuddy-app
    spec:
      serviceAccountName: buildbuddy
      containers:
        - name: buildbuddy-app
          image: gcr.io/flame-public/buildbuddy-app-onprem:v2.12.1
          ports:
            - name: http
              containerPort: 8080
            - name: grpc
              containerPort: 1985
          volumeMounts:
            - mountPath: /data
              name: database
            - mountPath: "/config.yaml"
              name: config
              subPath: "config.yaml"
      volumes:
        - name: config
          configMap:
            name: buildbuddy
        - name: database
          persistentVolumeClaim:
            claimName: buildbuddy
