infrastructure/buildbuddy/004-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: buildbuddy
  namespace: default
spec:
  selector:
    app: buildbuddy-app
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: buildbuddy-grpc
  namespace: default
spec:
  selector:
    app: buildbuddy-app
  ports:
    - port: 1985
